force-app/main/default/objects/InvoiceDisclaimer__mdt/InvoiceDisclaimer__mdt.object-meta.xml
<CustomObject>
    <description>Various disclaimers that appear on various ERP Invoices</description>
    <label>Invoice Disclaimer</label>
    <pluralLabel>Invoice Disclaimers</pluralLabel>
</CustomObject>