force-app/main/default/objects/InvoiceDisclaimer__mdt/fields/English__c.field-meta.xml
<CustomField>
    <fullName>English__c</fullName>
    <description>The English version of the disclaimer</description>
    <label>English</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>