force-app/main/default/objects/InvoiceDisclaimer__mdt/fields/French__c.field-meta.xml
<CustomField>
    <fullName>French__c</fullName>
    <description>The French version of the disclaimer</description>
    <label>French</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>