force-app/main/default/objects/InvoiceDisclaimer__mdt/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <description>The Type of Invoice to be displayed on</description>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Service Order</fullName>
                <default>true</default>
                <label>Internal Service Order</label>
            </value>
            <value>
                <fullName>Partner Boat Sale</fullName>
            </value>
            <value>
                <fullName>Partner Parts Order</fullName>
            </value>
            <value>
                <fullName>Retail Boat Sale</fullName>
            </value>
            <value>
                <fullName>Retail Counter Sale</fullName>
            </value>
            <value>
                <fullName>Service Order</fullName>
            </value>
            <value>
                <fullName>Warranty Payable</fullName>
            </value>
            <value>
                <fullName>Warranty Recoverable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>