force-app/main/default/objects/InvoiceDisclaimer__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Specify if the disclaimer is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>