force-app/main/default/objects/InvoiceDisclaimer__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The order which to display the disclaimers on the invoice</description>
    <inlineHelpText>The order which to display the disclaimers on the invoice</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>