force-app/main/default/objects/InvoiceDisclaimer__mdt/fields/Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Signature_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this disclaimer require the authorization and signature of the customer</description>
    <inlineHelpText>Does this disclaimer require the authorization and signature of the customer</inlineHelpText>
    <label>Signature Required</label>
    <type>Checkbox</type>
</CustomField>