force-app/main/default/objects/InvoiceDisclaimer__mdt/fields/Title_FR__c.field-meta.xml
<CustomField>
    <fullName>Title_FR__c</fullName>
    <description>The French title</description>
    <label>Title FR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>