force-app/main/default/objects/InvoiceDisclaimer__mdt/listViews/All_Disclaimers.listView-meta.xml
<ListView>
    <fullName>All_Disclaimers</fullName>
    <columns>MasterLabel</columns>
    <columns>Invoice_Type__c</columns>
    <columns>IsActive__c</columns>
    <columns>Title__c</columns>
    <columns>English__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Disclaimers</label>
    <language>en_US</language>
</ListView>